# fastapi_layout

./: main.py  pyproject.toml  router.py  settings.py
core/: app.py  handle_exception.py  lifetime.py  log.py
handler/: index.py  login.py  user.py
middleware/: __init__.py  unify_json.py
models/: model.py  user.py
repo/: __init__.py  user.py
rest/common/: index.py  login.py  model.py  schemas.py
rest/user/: model.py  repo.py
router/: api_router.py
schemas/: base.py  index.py
serialization/: base.py  common.py  index.py  login.py
service/: index.py  login.py
store/kafka/: dependencies.py  lifetime.py
store/mysql/: lifetime.py
store/postgreSQL/: __init__.py  dependencies.py
store/rabbit/: dependencies.py  lifetime.py
store/redis/: __init__.py  dependency.py  fn.py  lifetime.py
utils/: timex.py
utils/db/: base.py  create_database.py
utils/erroron/: base.py  code.py
utils/jwtx/: __init__.py  dependencies.py  jwtx.py
