[tool.poetry]
name = "fastapi-layout"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
yarl = "^1.9.2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.23"
redis = {extras = ["hiredis"], version = "^5.0.1"}
orjson = "^3.9.10"
aiomysql = "^0.2.0"
alembic = "^1.12.1"
cryptography = "^41.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"